CoR implementation
